--- a/quiz_v1.1.0.html
+++ b/quiz_v1.1.0.html
@@ -1,6 +1,4 @@
 <!--
-  By Andrey Nesterenko
-  Released on 2020-11-24 11:32
 -->
 <!doctype html>
 <html>
@@ -24,7 +22,7 @@
     function init(){
       var continueExec = 1;
       try{
-        eval('window.testData='+decodeURI(document.location.href.split('?')[1]));
+        eval('window.testData='+atob(decodeURI(document.location.href.split('?')[1])));
       } catch(error){
         var board = document.getElementById('quizBoard');
         board.innerHTML='<h1>Invalid test data!</h1>';
@@ -61,9 +59,13 @@
       } else{
           var board = document.getElementById('quizBoard');
           board.innerHTML='<h1>Quiz results</h1>';
+          var correctAnswers = 0;
           for(var loop3=0;loop3<=questionNumber-1;loop3++){
-            board.innerHTML = board.innerHTML+'<br>Question '+eval(questionNumber-loop3)+' correct: '+eval('window.Question'+eval(questionNumber-loop3)+'correct')+'.';
+            if(eval('window.Question'+eval(questionNumber-loop3)+'correct')==true){
+              correctAnswers++;
+            }
           }
+          board.innerHTML = board.innerHTML+'<br>'+correctAnswers+'/'+window.testData.questions;
         }
     }
     onload = function(){
