--- a/quiz_v1.html
+++ b/quiz_v1.html
@@ -65,7 +65,7 @@
               correctAnswers++;
             }
           }
-          board.innerHTML = board.innerHTML+'<br>'+correctAnswers+'/'+window.testData.questions;
+          board.innerHTML = board.innerHTML+'<br>'+correctAnswers+'/'+window.testData.questions+'<br><button onclick="location.reload()">Play again</button>';
         }
     }
     onload = function(){
