--- a/quiz_v2.html
+++ b/quiz_v2.html
@@ -25,12 +25,12 @@
       }
       button {
         font-family: Sans-Serif;
-        font-size: 50%;
+        font-size: 200%;
         border: solid black 1px;
         background-color: #ffffff
       }
       body {
-        text-align: center;
+        text-align: left;
         font-family: Sans-Serif;
         font-size: 100%;
       }
